tests/e2e/invalid_return_type2.story
function foo returns foo
    return ""
